// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.addListener() adds given listeners at most once 1`] = `
[
  [MockFunction A],
]
`;

exports[`.addListener() adds given listeners at most once 2`] = `
[
  [MockFunction A],
]
`;

exports[`.addListener() adds given listeners at most once 3`] = `
[
  [MockFunction A],
  [MockFunction B],
]
`;

exports[`.addListener() adds given listeners at most once 4`] = `
[
  [MockFunction A],
  [MockFunction B],
]
`;

exports[`.addListener() removes functional unsubscribe function 1`] = `
[
  [MockFunction A],
  [MockFunction B],
  [MockFunction C],
]
`;

exports[`.addListener() removes functional unsubscribe function 2`] = `
[
  [MockFunction A],
  [MockFunction C],
]
`;

exports[`.addListener() removes functional unsubscribe function 3`] = `
[
  [MockFunction A],
]
`;

exports[`.addListener() removes functional unsubscribe function 4`] = `
[
  [MockFunction A],
]
`;

exports[`.emit() calls connected listeners with given arguments 1`] = `
[
  [
    "ARG1",
    "arg2",
  ],
]
`;

exports[`.emit() calls connected listeners with given arguments 2`] = `
[
  [
    "ARG1",
    "arg2",
  ],
]
`;

exports[`.emit() calls connected listeners with given arguments 3`] = `
[
  [
    "ARG1",
    "arg2",
  ],
]
`;

exports[`.emit() calls connected listeners with given arguments 4`] = `
[
  [
    "ARG1",
    "arg2",
  ],
  [
    "second call",
  ],
]
`;

exports[`.removeListener() removes given listener if it is connected 1`] = `
[
  [MockFunction A],
  [MockFunction B],
  [MockFunction C],
  [MockFunction D],
]
`;

exports[`.removeListener() removes given listener if it is connected 2`] = `
[
  [MockFunction B],
  [MockFunction C],
  [MockFunction D],
]
`;

exports[`.removeListener() removes given listener if it is connected 3`] = `
[
  [MockFunction B],
  [MockFunction D],
]
`;

exports[`.removeListener() removes given listener if it is connected 4`] = `
[
  [MockFunction B],
  [MockFunction D],
]
`;
